// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Dropdown /> snapshot 1`] = `
<div>
  <div
    class="dropdown block"
  >
    <div
      class="form-control w-full flex"
    >
      <div
        class="relative"
      >
        <input
          class="input input-bordered w-full text-box-size-md text-box-with-right-icon"
          data-testid="test"
          id="test"
          name="test"
          tabindex="0"
          value=""
        />
        <svg
          class="text-box-right-icon text-box-right-icon-size-md cursor-pointer"
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 320 512"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M41 288h238c21.4 0 32.1 25.9 17 41L177 448c-9.4 9.4-24.6 9.4-33.9 0L24 329c-15.1-15.1-4.4-41 17-41z"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Dropdown /> snapshot full 1`] = `
<div>
  <div
    class="dropdown block"
  >
    <div
      class="form-control w-full flex"
    >
      <div
        class="label"
      >
        <label
          class="label-text"
          for="test"
        >
          Label
        </label>
      </div>
      <div
        class="relative"
      >
        <input
          class="input input-bordered w-full text-box-size-md input-error text-box-with-right-icon"
          data-testid="test"
          disabled=""
          id="test"
          name="test"
          tabindex="0"
          value=""
        />
        <svg
          class="text-box-right-icon text-box-right-icon-size-md cursor-pointer"
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 320 512"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M41 288h238c21.4 0 32.1 25.9 17 41L177 448c-9.4 9.4-24.6 9.4-33.9 0L24 329c-15.1-15.1-4.4-41 17-41z"
          />
        </svg>
      </div>
      <p
        class="text-red-500"
      >
        Error
      </p>
    </div>
  </div>
</div>
`;
